k8s/app-deployments/mongo-service.yml

kind: Service
apiVersion: v1
metadata:
  name: mongo-service
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
