k8s/app-deployments/ui-service.yml
kind: Service
apiVersion: v1
metadata:
  name: ui-service
  labels:
    release: "1"
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
  - port: 8000
    targetPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: ui-service
  namespace: monitoring
  labels:
    release: "1"
spec:
  type: ExternalName
  externalName: ui-service.application.svc.cluster.local
  ports:
  - port: 8000
