k8s/app-deployments/ui-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ui.avasiliev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ui-service
          servicePort: 8000
